<resources>
    <string name="app_name">Gearshift</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="settings">Settings</string>

    <string name="profile">Profile</string>
    <string name="profile_name">Name</string>
    <string name="connection">Connection</string>
    <string name="con_host">Host</string>
    <string name="con_port">Port</string>
    <string name="con_use_ssl">Use SSL</string>
    <string name="updates">Updates</string>
    <string name="update_interval">Update interval</string>
    <string name="full_update">Full update</string>
    <string name="full_update_label">Every %1$d active updates</string>

    <string name="con_name_cannot_be_empty">The profile name cannot be empty</string>
    <string name="con_host_cannot_be_empty">The host cannot be empty</string>
    <string name="con_port_not_valid">The port value must be between 1 and 65535</string>
    <string name="con_proxy_host_cannot_be_empty">The proxy host cannot be empty</string>
    <string name="con_proxy_port_not_valid">The proxy port value must be between 1 and 65535</string>
    <string name="con_timeout_not_valid">The timeout must be a positive number</string>

    <string-array name="pref_full_update_entries">
        <item>Disable partial updates</item>
        <item>2 updates</item>
        <item>3 updates</item>
        <item>5 updates</item>
        <item>10 updates</item>
        <item>30 updates</item>
        <item>60 updates</item>
        <item>100 updates</item>
    </string-array>

    <string-array name="pref_update_interval_entries">
        <item>Every second</item>
        <item>2 seconds</item>
        <item>5 seconds</item>
        <item>10 seconds</item>
        <item>30 seconds</item>
        <item>Every minute</item>
        <item>2 minutes</item>
        <item>Never</item>
    </string-array>
    <string name="authentication">Authentication</string>
    <string name="con_username">Username</string>
    <string name="con_password">Password</string>
    <string name="proxy">Proxy</string>
    <string name="con_proxy_host">Proxy Host</string>
    <string name="con_proxy_port">Proxy Port</string>
    <string name="advanced">Advanced</string>
    <string name="con_timeout">Timeout</string>
    <string name="con_path">Path</string>
    <string name="first_time_profile_title">Hi there</string>
    <string name="first_time_profile_subtitle">Please fill out all relevant information for access to your torrent server. You can adjust the profile later in the settings.</string>
    <string name="new_profile">New profile</string>
    <string name="action_test">Test</string>

    <string name="profile_check_success">Success</string>
    <string name="profile_check_failure">Failure</string>

    <string-array name="pref_con_retries_entries">
        <item>Once</item>
        <item>Twice</item>
        <item>3 times</item>
        <item>5 times</item>
        <item>10 times</item>
        <item>15 times</item>
    </string-array>

    <string name="tracker_unknown_host">Unknown host</string>
</resources>
