<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="org.sugr.gearshift.viewmodel.ProfileEditorViewModel"/>
        <import type="java.lang.String"/>
        <import type="android.view.View"/>
    </data>

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="11dp"
                android:text="@={viewModel.profileName}"
                android:drawableStart="@drawable/ic_required_small"
                android:layout_width="match_parent"
                android:hint="@string/profile_name"
                android:maxLines="1"
                bind:error="@{viewModel.profileNameValid ? null : @string/con_name_cannot_be_empty}"/>
        </android.support.design.widget.TextInputLayout>

        <!-- TODO: Add the color selector in this section -->

        <TextView
            style="@style/HeaderText.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connection"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:text="@={viewModel.host}"
                android:drawableStart="@drawable/ic_required_small"
                android:layout_width="match_parent"
                android:hint="@string/con_host"
                android:maxLines="1"
                bind:error="@{viewModel.hostValid ? null : @string/con_host_cannot_be_empty}"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:text="@={viewModel.port}"
                android:drawableStart="@drawable/ic_required_small"
                android:layout_width="match_parent"
                android:hint="@string/con_port"
                android:maxLines="1"
                bind:error="@{viewModel.portValid ? null : @string/con_port_not_valid}"/>

        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="@={viewModel.useSSL}"
            android:text="@string/con_use_ssl"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"/>

        <TextView
            style="@style/HeaderText.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawableStart="@{(viewModel.sectionCollapse[`updates`] ?? false) ? @drawable/ic_header_collapsed : @drawable/ic_header_expanded}"
            android:onClick="@{() -> viewModel.toggleCollapseSection(`updates`)}"
            android:text="@string/updates"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="@{(viewModel.sectionCollapse[`updates`] ?? false) ? View.GONE : View.VISIBLE}">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="8dp"
                android:text="@string/update_interval"/>

            <Button
                style="?android:borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="12dp"
                android:gravity="start"
                android:text="@{viewModel.updateIntervalLabel}"
                android:onClick="@{() -> viewModel.onPickUpdateInterval()}"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="@{(viewModel.sectionCollapse[`updates`] ?? false) ? View.GONE : View.VISIBLE}">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="8dp"
                android:text="@string/full_update"/>

            <Button
                style="?android:borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="12dp"
                android:gravity="start"
                android:text='@{String.format(viewModel.fullUpdateLabel ?? "", viewModel.fullUpdateValue)}'
                android:onClick="@{() -> viewModel.onPickFullUpdate()}"/>


        </LinearLayout>

        <TextView
            style="@style/HeaderText.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@{(viewModel.sectionCollapse[`auth`] ?? false) ? @drawable/ic_header_collapsed : @drawable/ic_header_expanded}"
            android:onClick="@{() -> viewModel.toggleCollapseSection(`auth`)}"
            android:text="@string/authentication"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{(viewModel.sectionCollapse[`auth`] ?? false) ? View.GONE : View.VISIBLE}"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:text="@={viewModel.username}"
                android:layout_width="match_parent"
                android:hint="@string/con_username"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{(viewModel.sectionCollapse[`auth`] ?? false) ? View.GONE : View.VISIBLE}"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:text="@={viewModel.password}"
                android:layout_width="match_parent"
                android:hint="@string/con_password"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            style="@style/HeaderText.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@{(viewModel.sectionCollapse[`proxy`] ?? false) ? @drawable/ic_header_collapsed : @drawable/ic_header_expanded}"
            android:onClick="@{() -> viewModel.toggleCollapseSection(`proxy`)}"
            android:text="@string/proxy"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{(viewModel.sectionCollapse[`proxy`] ?? false) ? View.GONE : View.VISIBLE}"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:text="@={viewModel.proxyHost}"
                android:layout_width="match_parent"
                android:hint="@string/con_proxy_host"
                android:maxLines="1"
                bind:error="@{viewModel.proxyHostValid ? null : @string/con_proxy_host_cannot_be_empty}"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{(viewModel.sectionCollapse[`proxy`] ?? false) ? View.GONE : View.VISIBLE}"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:text="@={viewModel.proxyPort}"
                android:layout_width="match_parent"
                android:hint="@string/con_proxy_port"
                android:maxLines="1"
                bind:error="@{viewModel.proxyPortValid ? null : @string/con_proxy_port_not_valid}"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            style="@style/HeaderText.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@{(viewModel.sectionCollapse[`advanced`] ?? false) ? @drawable/ic_header_collapsed : @drawable/ic_header_expanded}"
            android:onClick="@{() -> viewModel.toggleCollapseSection(`advanced`)}"
            android:text="@string/advanced"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{(viewModel.sectionCollapse[`advanced`] ?? false) ? View.GONE : View.VISIBLE}"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:text="@={viewModel.timeout}"
                android:layout_width="match_parent"
                android:hint="@string/con_timeout"
                android:maxLines="1"
                bind:error="@{viewModel.timeoutValid ? null : @string/con_timeout_not_valid}"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{(viewModel.sectionCollapse[`advanced`] ?? false) ? View.GONE : View.VISIBLE}"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:text="@={viewModel.path}"
                android:layout_width="match_parent"
                android:hint="@string/con_path"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</layout>
